<resources>
    <string name="app_name">Ormosia</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="mymessgaes">My Messages</string>
    <string name="loginmenu">Sign in</string>
    <string name="signupmenu">Sign Up</string>
    <string name="title_activity_socket">SocketActivity</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!--String related to Singup -->
    <string name="signupUsername">Name</string>
    <string name="signupPassword">Password</string>
    <string name="signupEmail">Email</string>
    <string name="createaccount">Create Account</string>
    <string name="gotologin">Already a member? Login</string>
    <string name="reenterpassword">Re-enter Password</string>

    <string name="title_activity_new_splash">NewSplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_new_message">NewMessageActivity</string>

    <!--String related to send -->
    <string name="sendtitle">做个标题党～～～</string>
    <string name="sendmessage">讲你所想</string>
    <string name="Anonymous">Anonymous or not</string>
    <string name="Sending">Sending...</string>
    <string name="send_btn_in_postfgm">Biu~~发送！</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_message_fragment">Developing</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">THIS SHOULD BE A SETTINGS FRAGMENT</string>
    <string name="title_activity_context">ContextActivity</string>

</resources>
