<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewMessageActivity"
    android:focusable="true"
    android:focusableInTouchMode="true" >

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/send_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sendtitle"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="107dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="86dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <EditText
            android:id="@+id/send_message"
            android:layout_width="match_parent"
            android:layout_height="91dp"
            android:hint="@string/sendmessage" />
    </android.support.design.widget.TextInputLayout>

    <CheckBox
        android:id="@+id/checkanonymous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="208dp"
        android:paddingLeft="10dp"
        android:paddingRight="24dp"
        android:text="@string/Anonymous"
        android:checked="false"
        android:textColor="@color/iron"/>

</RelativeLayout>